syntax = "proto3";

package userPackage;

service UserService {
  rpc CreateUser (User) returns (Response) {}; // CREATE
  rpc GetAllUser (Empty) returns (Users) {}; // READ
  rpc UpdateUser (UserWithID) returns (Response) {}; // UPDATE
  rpc DeleteUser (UserID) returns (Response) {}; // DELETE
  rpc Login (LoginRequest) returns (Response) {}; // LOGIN
}

message User {
  string email = 1;
  string name = 2;
  string password = 3;
  string institution = 4;
}

message UserID {
  string id = 1;
}

message Users {
  repeated User users = 1;
}

message UserWithID {
  UserID userId = 1;
  User user = 2; 
}

message Response {
  string message = 1;
  int32 code = 2;
  string userId = 3;
  User users = 4;
}

message Empty {}

message LoginRequest {
  string email = 1;
  string password = 2;
}
